# SVFKnowledgeEditing

./: .gitignore  Dockerfile  PROMT_BASE_Llama.ipynb  README.md  pyproject.toml
LORA_Llama/: LORA_train.py
LORA_Llama/config/: config.yaml
LORA_Llama/config/dataset/: dataset.yaml
LORA_Llama/config/lora/: lora.yaml
LORA_Llama/config/model/: meta_llama.yaml
LORA_Llama/config/training/: train.yaml
config/: config.yaml
config/base_model/: llama32i1b.yaml
config/optimization/: reinforce.yaml
config/policy/: default.yaml
config/task/: wikidata_counterfact.yaml
svf_knowledge_editing/: model.py  optimizer.py  prompts.py  svd_reinforce_hydra.py  task.py  train_task_expert.sh  utils.py
svf_knowledge_editing/eval/models/: vllm_model.py
svf_knowledge_editing/eval/tasks/: knowledge_editing.py
