[tool.poetry]
name = "svf_knowledge_editing"
version = "0.1.0"
description = ""
authors = ["VAGA (Veronika Morozova, Alexander Ploskin, George Rafaelyan, Anna Borisiuk)"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.10"
wheel = "^0.45.1"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
numpy = "1.26.4"
wandb = "^0.19.8"
transformers = "^4.50.1"
colorlog = "^6.9.0"
pydantic = "^2.10.6"
huggingface-hub = "^0.29.3"
vllm = "0.5.3.post1"
accelerate = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
